Ignored warnings on build npm

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-node@v3
       - run: npm install
       - run: npm run build
+          - env:
+              CI: false
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
