--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Publish Website to CPanel
 on:
   push:
     branches:
-      - feat/actions
+      - master
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
