--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siremar",
-  "homepage":"https://siremar.vxs8596.uta.cloud/",
+  "homepage": "https://siremar.vxs8596.uta.cloud/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
