--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
@@ -22,8 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && cp ./.htaccess ./build",
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env.production react-scripts build && cp ./.htaccess ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
